# dynamodb-rust

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/async_binance/: client_async.rs  mod.rs  models.rs
src/aws_resources/: clients.rs  mod.rs  ssm_params.rs
src/bookticker_stream/: bookticker.rs  db.rs  mod.rs  ticker_db.rs
src/order_stream/: messages.rs  mod.rs  order_update.rs
