[package]
name = "dynamo-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.56.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
