[package]
name = "dynamo-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-types = "0.12"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.56.0"
aws-sdk-ssm = "1.57.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
reqwest = {version ="0.12.8", features=['json']}
thiserror = "2.0.5"
ring = "0.17.8"
tungstenite = "0.26.1"
bytes = "1.9.0"
